syntax = "proto3";

option csharp_namespace = "GrpcService.web.Protos";

enum EmployeeStatus {
	NORMAL = 0;
	ON_VACATION = 1;
	RESIGNED = 2;
	RETIRED = 3;
}